# StaMINA

./: CMakeLists.txt  README.md
src/common/: assert.cpp  assert.hpp  common_types.hpp  instructions.inc  string_util.hpp
src/smasm/: lexer.cpp  lexer.hpp  lexer_tests.cpp  main.cpp  position.hpp
src/stamina/: main.cpp
src/tests/: main.cpp
